--- a/labforweb/HTML_CSS/Stop&Code2/index.html
+++ b/labforweb/HTML_CSS/Stop&Code2/index.html
@@ -2,12 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Fabio-Zagaria">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photographs by Delora Butler</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <div class="contenitore">
+        <header>
         <div class="titolo">
             <h1>PHOTO-GRAPHS</h1>
 
@@ -22,7 +27,7 @@
 
         <!-- WHO I AM---------------------------------->
 
-        <h3>who I am</h3>
+        <h3 class="subtitoli">who I am</h3>
 
         <div class="whoIam">
             <img src="immagini/who-i-am.jpg" alt="Ragazza distesa con palline da golf">
@@ -38,29 +43,29 @@
         <div class="portfolio">
             <div class="box">
                 <img src="immagini/portfolio_1.jpg" alt="Uomo in posa di profilo">
-                <p>Modeling Portfolio</p>
+                <strong>Modeling Portfolio</strong>
                 <p>Daniel Gallego</p>
-                <p>I wanted my first project as a model to be with someone I trusted, so I contacted Delora for a portfolio-building shoot. She guided me through everything while respecting my own preferences. I would not trade that experience for anything."</p>
+                <i>I wanted my first project as a model to be with someone I trusted, so I contacted Delora for a portfolio-building shoot. She guided me through everything while respecting my own preferences. I would not trade that experience for anything."</i>
             </div>
             <div class="box">
                 <img src="immagini/portfolio_2.jpg" alt="Ragazza in primo piano con viso decorato">
-                <p>Commercial Shoot</p>
+                <strong>Commercial Shoot</strong>
                 <p>Fleure Beauty</p>
-                <p>We love working with Delora because she captures the brand so well. She shows the voice we want to project through her photos. She's a joy to work with, especially on set."</p>
+                <i>We love working with Delora because she captures the brand so well. She shows the voice we want to project through her photos. She's a joy to work with, especially on set."</i>
             </div>
             <div class="box">
                 <img src="immagini/portfolio_3.jpg" alt="Ragazza in posa">
-                <p>Collection Campaign</p>
+                <strong>Collection Campaign</strong>
                 <p>Dualitee Apparel</p>
-                <p>"Delora helps us bring out the human element in our clothes. She shows our customers the fluidity that can't be seen off the racks. We always contact her whenever we need a photographer."</p>
+                <i>"Delora helps us bring out the human element in our clothes. She shows our customers the fluidity that can't be seen off the racks. We always contact her whenever we need a photographer."</i>
             </div>
         </div>
 </main>
 
 <footer>
-    <h3>info & contacts</h3>
+    <h3 class="subtitoli">info & contacts</h3>
     <div class="footer">
-        <img src="/immagini/contacts.jpg" alt="Ragazza che copre il proprio viso con le sue mani">
+        <img src="immagini/contacts.jpg" alt="Ragazza che copre il proprio viso con le sue mani">
         <div class="footer-info">
             <div class="info">
                 <h2>Experience</h2>
@@ -90,6 +95,8 @@
     </div>
 
 </footer>
+    
+    </div>
     
 </body>
 </html>
