--- a/labforweb/JavaScript/SecondaLezione/scrivi.html
+++ b/labforweb/JavaScript/SecondaLezione/scrivi.html
@@ -13,6 +13,7 @@
 
     <input type="text" placeholder="Scrivi qui" name="input" id="input">
     <button id="inviaBtn">Invia</button>
+    <div id="errore"></div>
   </main>
   
 
