stopcode3js finito e stopcode2js quasi

--- a/labforweb/JavaScript/STOPCODE/202622026124221_morra-cinese/morra-cinese/index.html
+++ b/labforweb/JavaScript/STOPCODE/202622026124221_morra-cinese/morra-cinese/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/stile.css">
     <title>Giochiamo alla morra cinese</title>
+    <script src="script/script.js" defer></script>
 </head>
 <body>
     <h1>Giochiamo alla morra cinese</h1>
